* Dec 28 2000 hship

Restructure RadioGroup and Radio slightly, to make them work (combined) more like a 
PropertySelection.
No longer use j2ee.jar, use a combination of javax.servlet.jar from Jetty's distribution,
and lib/ext/ejb.jar from the jBoss distribution.

* Dec 27 2000 hship

Change IBinding.getBoolean() to sniff for array types and return true if the length
is non-zero.

* Dec 26 2000 hship

Create a re-usable threadsafe Pool component and use it, instead of ad-hoc code,
to handle pooled Pages.

* Dec 21 2000 hship

Create a special case in PageRecorder for converting EJB references to handles for
storage and vice-versa when the page is restored.
Fix a previously unnoticed problem caused by bad timing in the interaction between
committing page changes and lazy creation of persistent page properties.
Add new checks to the PageRecorder to detect when a persistent property changes during page rendering.

* Dec 21 2000 hship

Attempt a few minor optimizations related to PropertyHelper and PropertyBinding.


* Dec 20 2000 hship

Update the documentation.
Make sure the visit object is created only when needed.

* Dec 20 2000 hship

Add the FieldLabel component, used for providing a label for validating text fields.
 
* Dec 19 2000 hship

Fix a typo that broke the Rollover component.

* Dec 19 2000 hship

Slight improvements in efficiency of the ScriptParser.
Fix minor Javadoc mistakes.

* Dec 18 2000 hship

Revisit the ScriptGenerator class, changing the format of the .script file from
home-brew to a fully specified XML document.

* Dec 15 2000 hship

Added the ScriptGenerator (and related classes) and converted the Rollover component
to use it.

* Dec 14 2000 hship

LOts of tweaks and cleanups to improve serialization.
Added the DataSqueezer and related classes that convert objects to Strings and back.
Added the Decorator class, used to match classes against adaptor objects.
Added some missing copyrights to various files.