@@ -1,5 +1,9 @@
 * Dec 28 2000 hship
 
+Change SimpleApplication to create the visit object based on a class specified in the application specification.
+
+* Dec 28 2000 hship
+
 Restructure RadioGroup and Radio slightly, to make them work (combined) more like a 
 PropertySelection.
 No longer use j2ee.jar, use a combination of javax.servlet.jar from Jetty's distribution,
